--- a/lifecycle-data/products/forefront-protection-2010-for-exchange-server.yml
+++ b/lifecycle-data/products/forefront-protection-2010-for-exchange-server.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Forefront Protection 2010 voor Exchange Server
-  description: Forefront Protection 2010 voor Exchange Server volgt het beleid voor vaste levenscyclus.
+  description: Forefront Protection 2010 voor Exchange Server volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 9565d051119e9367e55a37ab1aeb269fe0fb3ed7
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812503"
 name: Forefront Protection 2010 voor Exchange Server
-summary: "Forefront Protection 2010 voor Exchange Server volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\n\n> [!IMPORTANT]\n> De roadmap voor beveiligingsproducten onder het merk Forefront is veranderd. Dit product wordt stopgezet per 31 december 2015. Zie migratiebegeleiding. \n"
+summary: "Forefront Protection 2010 voor Exchange Server volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\n> [!IMPORTANT]\n> De roadmap voor de beveiligingsproducten onder het merk Forefront is veranderd. Dit product wordt per 31 december 2015 stopgezet. Zie de richtlijnen voor migratie. \n"
 products:
 - office
 policyType: fixed
@@ -21,4 +21,4 @@ releases:
 - version: Original Release
   startDate: 11/01/2009
   endDate: 12/31/2015
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://www.microsoft.com/microsoft-365/blog/2015/01/23/still-using-forefront-protection-2010-exchange-server-make-move-soon/)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://www.microsoft.com/microsoft-365/blog/2015/01/23/still-using-forefront-protection-2010-exchange-server-make-move-soon/)"
