--- a/lifecycle-data/products/microsoft-business-solutions-for-analyticsfrx-67-desktop.yml
+++ b/lifecycle-data/products/microsoft-business-solutions-for-analyticsfrx-67-desktop.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Business Solutions voor Analytics--FRx 6.7-desktop
-  description: Microsoft Business Solutions for Analytics--FRx 6.7 Desktop volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Business Solutions voor Analytics--FRx 6.7-desktop volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: ba731ed0c09140b17a3ebf628e7383065aa65714
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812432"
 name: Microsoft Business Solutions voor Analytics--FRx 6.7-desktop
 summary: >+
-  Microsoft Business Solutions for Analytics--FRx 6.7 Desktop volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Business Solutions voor Analytics--FRx 6.7-desktop volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 05/30/2004
   endDate: 07/08/2014
-content: "\n\n> [!NOTE]\n> FRx-ondersteuning eindigt op de aangegeven datum, tenzij deze wordt gedistribueerd als onderdeel van een Dynamics-product. Wanneer de dynamics-levenscyclusdatums worden gedistribueerd met een Dynamics-product, worden de FRx-datums overschrijven."
+content: "\n\n> [!NOTE]\n> FRx-ondersteuning eindigt op de aangegeven datum, tenzij deze wordt gedistribueerd als onderdeel van een Dynamics-product. Wanneer dit wordt gedistribueerd met een Dynamics-product, overschrijven de Dynamics-levenscyclusdatums de FRx-datums."
