--- a/lifecycle-data/products/engyro-product-connectors-for-microsoft-operations-manager-2005.yml
+++ b/lifecycle-data/products/engyro-product-connectors-for-microsoft-operations-manager-2005.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Engyro-productconnectors voor Microsoft Operations Manager 2005
-  description: Engyro Product Connectors voor Microsoft Operations Manager 2005 volgt het beleid voor vaste levenscyclus.
+  title: Engyro Product Connectors voor Microsoft Operations Manager 2005
+  description: Engyro Product Connectors voor Microsoft Operations Manager 2005 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: b421124e88b9e5ee8e28e9added4a7876c9405dd
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812515"
-name: Engyro-productconnectors voor Microsoft Operations Manager 2005
+name: Engyro Product Connectors voor Microsoft Operations Manager 2005
 summary: >+
-  Engyro Product Connectors voor Microsoft Operations Manager 2005 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Engyro Product Connectors voor Microsoft Operations Manager 2005 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
