--- a/lifecycle-data/products/hpc-pack-2008.yml
+++ b/lifecycle-data/products/hpc-pack-2008.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: HPC Pack 2008
-  description: HPC Pack 2008 volgt het beleid voor vaste levenscyclus.
+  description: HPC Pack 2008 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 795c6eef31bb7b6a3edcf1d90a193d682c89933a
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812494"
 name: HPC Pack 2008
 summary: >
-  HPC Pack 2008 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  HPC Pack 2008 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd. Zie de migratiebegeleiding hieronder.
+  > De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
 - windows
 policyType: fixed
@@ -35,4 +35,4 @@ releases:
 - version: Original Release
   startDate: 12/29/2008
   endDate: 10/11/2011
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://azure.microsoft.com/blog/announcing-new-options-for-sql-server-2008-and-windows-server-2008-end-of-support/)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://azure.microsoft.com/blog/announcing-new-options-for-sql-server-2008-and-windows-server-2008-end-of-support/)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
