--- a/lifecycle-data/products/microsoft-antigen.yml
+++ b/lifecycle-data/products/microsoft-antigen.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft-antigeen
-  description: Microsoft Antigen volgt het beleid voor vaste levenscyclus.
+  title: Microsoft Antigen
+  description: Microsoft Antigen volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 74b4c26a7bc5ff2ca5747a7dc50d91825ee5cd2c
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812470"
-name: Microsoft-antigeen
+name: Microsoft Antigen
 summary: >+
-  Microsoft Antigen volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Antigen volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: 9.0 voor Exchange, Enterprise Manager 9.0, voor SMTP Gateways, Spam Manager
+  Dit is van toepassing op de volgende edities: 9.0 voor Exchange, Enterprise Manager 9.0, voor SMTP-gateways, Spam Manager
 
 products:
 - windows
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 07/17/2006
   endDate: 12/31/2015
-content: "\n\n> [!NOTE]\n> De roadmap voor beveiligingsproducten onder het merk Forefront is veranderd.Dit product wordt stopgezet per 31 december 2015.\n\n## <a name=\"editions\"></a>Edities \n* 9.0 voor Exchange\n* Enterprise Manager 9.0\n* voor SMTP-gateways\n* Spam Manager"
+content: "\n\n> [!NOTE]\n> De roadmap voor de beveiligingsproducten onder het merk Forefront is veranderd. Dit product wordt per 31 december 2015 stopgezet.\n\n## <a name=\"editions\"></a>Edities \n* 9.0 voor Exchange\n* Enterprise Manager 9.0\n* voor SMTP-gateways\n* Spam Manager\n\n"
