--- a/lifecycle-data/products/microsoft-biztalk-accelerator-for-swift-21.yml
+++ b/lifecycle-data/products/microsoft-biztalk-accelerator-for-swift-21.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft BizTalk Accelerator voor SWIFT 2.1
-  description: Microsoft BizTalk Accelerator voor SWIFT 2.1 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft BizTalk Accelerator voor SWIFT 2.1 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 873f0dd00819c1df249d891f180e311b31e63a83
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812454"
 name: Microsoft BizTalk Accelerator voor SWIFT 2.1
 summary: >+
-  Microsoft BizTalk Accelerator voor SWIFT 2.1 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft BizTalk Accelerator voor SWIFT 2.1 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Enterprise, Standard
+  Dit is van toepassing op de volgende edities: Enterprise, Standard
 
 products:
 - microsoft-servers
@@ -30,4 +30,4 @@ releases:
 - version: Original Release
   startDate: 07/21/2005
   endDate: 10/14/2008
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
