--- a/lifecycle-data/products/microsoft-connected-services-framework-30.yml
+++ b/lifecycle-data/products/microsoft-connected-services-framework-30.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Connected Services Framework 3.0
-  description: Microsoft Connected Services Framework 3.0 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Connected Services Framework 3.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: f30c38e094a3b58f587d59871bd573607df04273
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812410"
 name: Microsoft Connected Services Framework 3.0
 summary: >+
-  Microsoft Connected Services Framework 3.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Connected Services Framework 3.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Billing Standard Business Event, Order Handling Standard Business Event, Server, Standard, Standard Server with Standard Business Events
+  Dit is van toepassing op de volgende edities: Billing Standard Business Event, Order Handling Standard Business Event, Server, Standard, Standard Server with Standard Business Events
 
 products:
 - connected-services-framework
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 06/30/2006
   endDate: 07/12/2016
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standaard bedrijfsevenement facturering\n* Standaard bedrijfsevenement voor orderafhandeling\n* Server\n* Standaard\n* Standaardserver met standaardbedrijfsgebeurtenissen"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Billing Standard Business Event\n* Order Handling Standard Business Event\n* Server\n* Standard\n* Standard Server with Standard Business Events"
