--- a/lifecycle-data/products/microsoft-customer-care-framework-2005-net-20-edition.yml
+++ b/lifecycle-data/products/microsoft-customer-care-framework-2005-net-20-edition.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Customer Care Framework 2005 .NET 2.0 Edition
-  description: Microsoft Customer Care Framework 2005 .NET 2.0 Edition volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Customer Care Framework 2005 .NET 2.0 Edition volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: c319c9a4362d847d9ac7fe80a48a13b3d7209cdd
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812408"
 name: Microsoft Customer Care Framework 2005 .NET 2.0 Edition
 summary: >
-  Microsoft Customer Care Framework 2005 .NET 2.0 Edition volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Customer Care Framework 2005 .NET 2.0 Edition volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > De ondersteuning is beëindigd. Zie de migratiebegeleiding hieronder.
+  > De ondersteuning is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
 - customer-care-framework
 policyType: fixed
@@ -29,4 +29,4 @@ releases:
 - version: Original Release
   startDate: 11/11/2006
   endDate: 01/10/2017
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://blogs.msdn.microsoft.com/crm/2016/04/07/microsoft-customer-care-framework-support-lifecycle-announcement)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://blogs.msdn.microsoft.com/crm/2016/04/07/microsoft-customer-care-framework-support-lifecycle-announcement)"
