--- a/lifecycle-data/products/microsoft-forefront-threat-management-gateway-medium-business-edition.yml
+++ b/lifecycle-data/products/microsoft-forefront-threat-management-gateway-medium-business-edition.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Forefront Threat Management Gateway, Medium Business Edition
-  description: Microsoft Forefront Threat Management Gateway, Medium Business Edition volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Forefront Threat Management Gateway, Medium Business Edition volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 3c131da862f2972fbb5afe704f499ea4e649df78
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812388"
 name: Microsoft Forefront Threat Management Gateway, Medium Business Edition
 summary: >+
-  Microsoft Forefront Threat Management Gateway, Medium Business Edition volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Forefront Threat Management Gateway, Medium Business Edition volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit geldt voor de volgende edities: Business
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 11/12/2008
   endDate: 11/12/2018
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://techcommunity.microsoft.com/t5/Product-Life-Cycle/FAST-products-approaching-the-end-of-extended-support-in-2018/td-p/101710)\n\n\n## <a name=\"editions\"></a>Edities \n* Bedrijven"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://techcommunity.microsoft.com/t5/Product-Life-Cycle/FAST-products-approaching-the-end-of-extended-support-in-2018/td-p/101710)\n\n\n## <a name=\"editions\"></a>Edities \n* Business"
