--- a/lifecycle-data/products/microsoft-forefront-threat-management-gateway-web-protection-services.yml
+++ b/lifecycle-data/products/microsoft-forefront-threat-management-gateway-web-protection-services.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Forefront Threat Management Gateway Web Protection Services
-  description: Microsoft Forefront Threat Management Gateway Web Protection Services volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Forefront Threat Management Gateway Web Protection Services volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: c4c69a070513e336ed8305b8f6a37c2bf5972d1c
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812387"
 name: Microsoft Forefront Threat Management Gateway Web Protection Services
 summary: >+
-  Microsoft Forefront Threat Management Gateway Web Protection Services volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Forefront Threat Management Gateway Web Protection Services volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: Original Release
   startDate: 12/01/2009
   endDate: 12/31/2015
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Routekaart voor de voorhoede](https://blogs.technet.microsoft.com/hybridcloud/2012/09/12/important-changes-to-forefront-product-roadmaps/)\n\n> [!NOTE]\n> De roadmap voor beveiligingsproducten onder het merk Forefront is veranderd.Dit product wordt stopgezet per 31 december 2015."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Forefront-roadmap](https://blogs.technet.microsoft.com/hybridcloud/2012/09/12/important-changes-to-forefront-product-roadmaps/)\n\n> [!NOTE]\n> De roadmap voor de beveiligingsproducten onder het merk Forefront is veranderd. Dit product wordt per 31 december 2015 stopgezet.\n\n\n"
