--- a/lifecycle-data/products/microsoft-host-integration-server-2010.yml
+++ b/lifecycle-data/products/microsoft-host-integration-server-2010.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Host Integration Server 2010
-  description: Microsoft Host Integration Server 2010 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Host Integration Server 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 2a46293719b430954ce5a27c1cea86948dfd35cd
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812067"
 name: Microsoft Host Integration Server 2010
 summary: >
-  Microsoft Host Integration Server 2010 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Host Integration Server 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product eindigt op 12 januari 2021. Zie de migratiebegeleiding hieronder.
+  > Ondersteuning voor dit product wordt beëindigd op 12 januari 2021. Zie hieronder de richtlijnen voor migratie.
 products:
 - microsoft-servers
 policyType: fixed
@@ -29,4 +29,4 @@ releases:
 - version: Original Release
   startDate: 11/14/2010
   endDate: 01/12/2021
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://techcommunity.microsoft.com/t5/Product-Life-Cycle/FAST-products-approaching-the-end-of-extended-support-in-2018/td-p/101710)\n* [Aanvullende migratie-informatie](/host-integration-server/install-and-config-guides/his-migration-tool-2020)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://techcommunity.microsoft.com/t5/Product-Life-Cycle/FAST-products-approaching-the-end-of-extended-support-in-2018/td-p/101710)\n* [Aanvullende migratiegegevens](/host-integration-server/install-and-config-guides/his-migration-tool-2020)"
