--- a/lifecycle-data/products/microsoft-identity-lifecycle-manager-2007.yml
+++ b/lifecycle-data/products/microsoft-identity-lifecycle-manager-2007.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Identity Lifecycle Manager 2007
-  description: Microsoft Identity Lifecycle Manager 2007 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Identity Lifecycle Manager 2007 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: e87de30d9ecd945c0aa172fa69f570a981114ab2
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812063"
 name: Microsoft Identity Lifecycle Manager 2007
 summary: >+
-  Microsoft Identity Lifecycle Manager 2007 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Identity Lifecycle Manager 2007 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -31,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 06/30/2007
   endDate: 01/13/2009
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/previous-versions/mim/ff608268(v=ws.10)?redirectedfrom=MSDN)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/previous-versions/mim/ff608268(v=ws.10)?redirectedfrom=MSDN)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
