--- a/lifecycle-data/products/microsoft-internet-information-services-75.yml
+++ b/lifecycle-data/products/microsoft-internet-information-services-75.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Internet Information Services 7.5
-  description: Microsoft Internet Information Services 7.5 volgt het beleid voor de levenscyclus van componenten.
+  description: Microsoft Internet Information Services 7.5 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
   ms.openlocfilehash: 22b88b7209f8aea2ae47d7486d5c946008768d76
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812757"
 name: Microsoft Internet Information Services 7.5
 summary: >+
-  Microsoft Internet Information Services 7.5 volgt het beleid voor de levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)
+  Microsoft Internet Information Services 7.5 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
@@ -22,4 +22,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 10/22/2009
-content: "> [!TIP]\n> Deze release staat bekend als een component die de ondersteuningslevenscyclus van het bovenliggende hoofdproduct, Windows 7 en Windows Server 2008 R2 volgt\n\n## <a name=\"links\"></a>Verwijzigingen \n* [Windows Server 2008 R2](/lifecycle/products/windows-server-2008-r2)"
+content: "> [!TIP]\n> Deze release staat bekend als een onderdeel die de ondersteuningslevenscyclus volgt van het bovenliggende hoofdproduct, Windows 7 en Windows Server 2008 R2.\n\n## <a name=\"links\"></a>Koppelingen \n* [Windows Server 2008 R2](/lifecycle/products/windows-server-2008-r2)"
