--- a/lifecycle-data/products/microsoft-internet-information-services-85.yml
+++ b/lifecycle-data/products/microsoft-internet-information-services-85.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Internet Information Services 8.5
-  description: Microsoft Internet Information Services 8.5 volgt het beleid voor de levenscyclus van componenten.
+  description: Microsoft Internet Information Services 8.5 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
   ms.openlocfilehash: 8493b959c25c256d639ec366055a2d2759849eb0
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811815"
 name: Microsoft Internet Information Services 8.5
 summary: >+
-  Microsoft Internet Information Services 8.5 volgt het beleid voor de levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)
+  Microsoft Internet Information Services 8.5 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
@@ -22,4 +22,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 11/13/2013
-content: "> [!TIP]\n> Deze release staat bekend als een component die de ondersteuningslevenscyclus van het bovenliggende hoofdproduct, Windows Server 2012 R2 en Windows 8.1 volgt.\n\n## <a name=\"links\"></a>Verwijzigingen \n* [Windows 8.1](/lifecycle/products/windows-81)\n* [Windows Server 2012 R2](/lifecycle/products/windows-server-2012-r2)"
+content: "> [!TIP]\n> Deze release staat bekend als een onderdeel die de ondersteuningslevenscyclus volgt van het bovenliggende hoofdproduct, Windows Server 2012 R2 en Windows 8.1.\n\n## <a name=\"links\"></a>Koppelingen \n* [Windows 8.1](/lifecycle/products/windows-81)\n* [Windows Server 2012 R2](/lifecycle/products/windows-server-2012-r2)"
