--- a/lifecycle-data/products/microsoft-net-framework-20.yml
+++ b/lifecycle-data/products/microsoft-net-framework-20.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft .NET Framework 2.0
-  description: Microsoft .NET Framework 2.0 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft .NET Framework 2.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: d6d186410b904b018d0d12029387bf88ac0784fb
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812381"
 name: Microsoft .NET Framework 2.0
 summary: >+
-  Microsoft .NET Framework 2.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft .NET Framework 2.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -31,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 02/17/2006
   endDate: 01/13/2009
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Veelgestelde vragen over levenscyclus - .NET Framework](/lifecycle/faq/dotnet-framework)\n* [Productinformatie](/dotnet/framework/migration-guide/versions-and-dependencies#net-framework-20)\n\n> [!NOTE]\n> De steun voor .NET Framework 2.0 is op 12 juli 2011 beëindigd."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus - .NET Framework](/lifecycle/faq/dotnet-framework)\n* [Productgegevens](/dotnet/framework/migration-guide/versions-and-dependencies#net-framework-20)\n\n> [!NOTE]\n> Ondersteuning voor .NET Framework 2.0 is beëindigd op 12 juli 2011."
