--- a/lifecycle-data/products/microsoft-net-framework-40.yml
+++ b/lifecycle-data/products/microsoft-net-framework-40.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft .NET Framework 4.0
-  description: Microsoft .NET Framework 4.0 volgt het beleid voor de levenscyclus van componenten.
+  description: Microsoft .NET Framework 4.0 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
   ms.openlocfilehash: e43bfc52befb82fbb52ee258076d2ebb53e53e35
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812753"
 name: Microsoft .NET Framework 4.0
 summary: >+
-  Microsoft .NET Framework 4.0 volgt het beleid voor de levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)
+  Microsoft .NET Framework 4.0 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: Original Release
   startDate: 03/31/2010
   endDate: 01/12/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Veelgestelde vragen over levenscyclus - .NET Framework](/lifecycle/faq/dotnet-framework)\n* [Productinformatie](/dotnet/framework/migration-guide/versions-and-dependencies#net-framework-4)\n\n> [!NOTE]\n> De steun voor .NET Framework 4, 4,5 en 4,5,1 eindigde op 12 januari 2016."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus - .NET Framework](/lifecycle/faq/dotnet-framework)\n* [Productgegevens](/dotnet/framework/migration-guide/versions-and-dependencies#net-framework-4)\n\n> [!NOTE]\n> Ondersteuning voor .NET Framework 4, 4.5 en 4.5.1 eindigde op 12 januari 2016."
