--- a/lifecycle-data/products/microsoft-office-business-scorecard-manager-2005.yml
+++ b/lifecycle-data/products/microsoft-office-business-scorecard-manager-2005.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office Business Scorecard Manager 2005
-  description: Microsoft Office Business Scorecard Manager 2005 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Office Business Scorecard Manager 2005 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: bc345248ceba7c8f2cac730bc1141a0dae32d398
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812748"
 name: Microsoft Office Business Scorecard Manager 2005
 summary: >+
-  Microsoft Office Business Scorecard Manager 2005 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office Business Scorecard Manager 2005 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 12/27/2005
   endDate: 01/12/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://blogs.msdn.microsoft.com/performancepoint/2016/04/06/end-of-support-for-business-scorecard-accelerator-and-business-scorecard-manager-2005)\n\n> [!NOTE]\n> Ondersteuning voor Business Scorecard Manager 2005 eindigde op 1/12/2016."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://blogs.msdn.microsoft.com/performancepoint/2016/04/06/end-of-support-for-business-scorecard-accelerator-and-business-scorecard-manager-2005)\n\n> [!NOTE]\n> Ondersteuning voor Business Scorecard Manager 2005 is beëindigd op 12-1-2016."
