--- a/lifecycle-data/products/microsoft-office-communications-server-2007.yml
+++ b/lifecycle-data/products/microsoft-office-communications-server-2007.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office Communications Server 2007
-  description: Microsoft Office Communications Server 2007 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Office Communications Server 2007 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 80fa4146ce4ae0ec8055a0915fa75ef64551f9f7
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812744"
 name: Microsoft Office Communications Server 2007
 summary: >+
-  Microsoft Office Communications Server 2007 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office Communications Server 2007 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Enterprise, Standard
+  Dit is van toepassing op de volgende edities: Enterprise, Standard
 
 products:
 - office
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 10/27/2007
   endDate: 01/09/2018
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://blogs.technet.microsoft.com/nexthop/2016/02/22/end-of-extended-support-for-office-communicator-and-office-communications-server)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://blogs.technet.microsoft.com/nexthop/2016/02/22/end-of-extended-support-for-office-communicator-and-office-communications-server)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
