--- a/lifecycle-data/products/microsoft-office-communicator-2007-r2.yml
+++ b/lifecycle-data/products/microsoft-office-communicator-2007-r2.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office Communicator 2007 R2
-  description: Microsoft Office Communicator 2007 R2 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Office Communicator 2007 R2 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 96ef1f9786fe6c244254432e1f515155af5b267e
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812740"
 name: Microsoft Office Communicator 2007 R2
-summary: "Microsoft Office Communicator 2007 R2 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\nDit geldt voor de volgende edities: Alle toepasselijke, Telefoon\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. Zie migratiebegeleiding. \n"
+summary: "Microsoft Office Communicator 2007 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit geldt voor de volgende edities: allemaal van toepassing, Phone\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. Raadpleeg de richtlijnen voor migratie. \n"
 products:
 - office
 policyType: fixed
@@ -22,4 +22,4 @@ releases:
 - version: Original Release
   startDate: 03/19/2009
   endDate: 01/09/2018
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://blogs.technet.microsoft.com/nexthop/2016/02/22/end-of-extended-support-for-office-communicator-and-office-communications-server/)\n\n\n## <a name=\"editions\"></a>Edities \n* Alle van toepassing\n* Telefoon"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://blogs.technet.microsoft.com/nexthop/2016/02/22/end-of-extended-support-for-office-communicator-and-office-communications-server/)\n\n\n## <a name=\"editions\"></a>Edities \n* Alles wat van toepassing is\n* Phone"
