--- a/lifecycle-data/products/microsoft-office-excel-2007.yml
+++ b/lifecycle-data/products/microsoft-office-excel-2007.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office Excel 2007
-  description: Microsoft Office Excel 2007 volgt het beleid voor een vaste levenscyclus.
+  description: Microsoft Office Excel 2007 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: fc9de7b0c021adafe412b797fc40b821dd5d7a4f
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812045"
 name: Microsoft Office Excel 2007
 summary: >+
-  Microsoft Office Excel 2007 volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office Excel 2007 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Home and Student, Standard
+  Dit is van toepassing op de volgende edities: Thuisgebruik en Studenten, Standaard
 
 products:
 - office
@@ -36,4 +36,4 @@ releases:
 - version: Original Release
   startDate: 01/27/2007
   endDate: 01/13/2009
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/office/troubleshoot/support/office-2007-not-support)\n\n\n## <a name=\"editions\"></a>Edities \n* Thuis en student\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/office/troubleshoot/support/office-2007-not-support)\n\n\n## <a name=\"editions\"></a>Edities \n* Thuisgebruik en Studenten\n* Standard"
