--- a/lifecycle-data/products/microsoft-office-forms-server-2007.yml
+++ b/lifecycle-data/products/microsoft-office-forms-server-2007.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office Forms Server 2007
-  description: Microsoft Office Forms Server 2007 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Office Forms Server 2007 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 01af695d1e4122676e1fbf362392e8b032ccf71e
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812039"
 name: Microsoft Office Forms Server 2007
-summary: "Microsoft Office Forms Server 2007 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. Zie de migratiebegeleiding hieronder. \n"
+summary: "Microsoft Office Forms Server 2007 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie. \n"
 products:
 - office
 policyType: fixed
@@ -31,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 01/27/2007
   endDate: 01/13/2009
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/office/troubleshoot/support/office-2007-not-support)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/office/troubleshoot/support/office-2007-not-support)"
