--- a/lifecycle-data/products/microsoft-office-project-portfolio-server-2007.yml
+++ b/lifecycle-data/products/microsoft-office-project-portfolio-server-2007.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office Project Portfolio Server 2007
-  description: Microsoft Office Project Portfolio Server 2007 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Office Project Portfolio Server 2007 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 2f15eca6cc021c35859f131ae0d1e3ddc0efc3ba
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812372"
 name: Microsoft Office Project Portfolio Server 2007
 summary: >+
-  Microsoft Office Project Portfolio Server 2007 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office Project Portfolio Server 2007 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 01/27/2007
   endDate: 04/14/2009
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/office/troubleshoot/support/office-2007-not-support)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/office/troubleshoot/support/office-2007-not-support)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
