--- a/lifecycle-data/products/microsoft-office-sharepoint-portal-server-2003.yml
+++ b/lifecycle-data/products/microsoft-office-sharepoint-portal-server-2003.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office SharePoint Portal Server 2003
-  description: Microsoft Office SharePoint Portal Server 2003 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Office SharePoint Portal Server 2003 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: ddcdf5740b01da6e536d1d65bcde6a80f702e8e6
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812362"
 name: Microsoft Office SharePoint Portal Server 2003
 summary: >+
-  Microsoft Office SharePoint Portal Server 2003 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office SharePoint Portal Server 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -34,4 +34,4 @@ releases:
 - version: Original Release
   startDate: 11/23/2003
   endDate: 01/10/2006
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
