--- a/lifecycle-data/products/microsoft-systems-management-server-2003-r2.yml
+++ b/lifecycle-data/products/microsoft-systems-management-server-2003-r2.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Systems Management Server 2003 R2
-  description: Microsoft Systems Management Server 2003 R2 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Systems Management Server 2003 R2 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 5d1cade536fbdca6669ad3953cf16c07d47c46fb
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812322"
 name: Microsoft Systems Management Server 2003 R2
 summary: >+
-  Microsoft Systems Management Server 2003 R2 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Systems Management Server 2003 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
