--- a/lifecycle-data/products/microsoft-visual-j-version-20-redistributable-package-second-edition.yml
+++ b/lifecycle-data/products/microsoft-visual-j-version-20-redistributable-package-second-edition.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Visual J# Versie 2.0 Herdistribueerbaar pakket Tweede editie
-  description: Microsoft Visual J# Versie 2.0 Herdistribueerbaar pakket Tweede editie volgt het beleid voor vaste levenscyclus.
+  title: Microsoft Visual J# Versie 2.0 Redistributable Package tweede editie
+  description: Herdistribueerbaar pakket tweede editie voor Microsoft Visual J# Version 2.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 13e81d8ba84a4aede4cd4df18a7e40d55de1d3dc
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811927"
-name: Microsoft Visual J# Versie 2.0 Herdistribueerbaar pakket Tweede editie
+name: Microsoft Visual J# Versie 2.0 Redistributable Package tweede editie
 summary: >+
-  Microsoft Visual J# Versie 2.0 Herdistribueerbaar pakket Tweede editie volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Herdistribueerbaar pakket tweede editie voor Microsoft Visual J# Version 2.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 08/27/2007
   endDate: 10/10/2017
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Ondersteuningsinformatie voor Visual J#](https://msdn.microsoft.com/vstudio/bb188593)\n\n> [!NOTE]\n> Ondersteuning voor dit product is beëindigd. Zie hieronder voor migratiebegeleiding."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Ondersteuningsgegevens voor Visual J#](https://msdn.microsoft.com/vstudio/bb188593)\n\n> [!NOTE]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie."
