--- a/lifecycle-data/products/microsoft-windows-sharepoint-services-20.yml
+++ b/lifecycle-data/products/microsoft-windows-sharepoint-services-20.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Windows SharePoint Services 2.0
-  description: Microsoft Windows SharePoint Services 2.0 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Windows SharePoint Services 2.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 3293736b7dd1f77d735150f0c004daf5840d0be0
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812315"
 name: Microsoft Windows SharePoint Services 2.0
-summary: "Microsoft Windows SharePoint Services 2.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\n\n> [!IMPORTANT]\n> De ondersteuning is beëindigd. \n"
+summary: "Microsoft Windows SharePoint Services 2.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\n> [!IMPORTANT]\n> De ondersteuning is beëindigd. \n"
 products:
 - office
 policyType: fixed
@@ -22,4 +22,4 @@ releases:
 - version: Original Release
   startDate: 06/03/2003
   endDate: 01/14/2014
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Windows SharePoint Services 2.0-ontwikkelaarsdocumentatie](/previous-versions/office/developer/sharepoint2003/dd587302(v=office.11))\n* [Productdocumentatie van Windows SharePoint Services 2.0](/previous-versions/tn-archive/cc288501(v=office.12))"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Windows SharePoint Services 2.0-documentatie voor ontwikkelaars](/previous-versions/office/developer/sharepoint2003/dd587302(v=office.11))\n* [Productdocumentatie voor Windows SharePoint Services 2.0](/previous-versions/tn-archive/cc288501(v=office.12))"
