--- a/lifecycle-data/products/system-center-operations-manager-2007.yml
+++ b/lifecycle-data/products/system-center-operations-manager-2007.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: System Center Operations Manager 2007
-  description: System Center Operations Manager 2007 volgt het beleid voor vaste levenscyclus.
+  description: System Center Operations Manager 2007 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 8efa21f33b388d13bbe5ca14c03dc2275d9d5b78
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812292"
 name: System Center Operations Manager 2007
-summary: "System Center Operations Manager 2007 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. Zie de migratiebegeleiding hieronder. \n"
+summary: "System Center Operations Manager 2007 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie. \n"
 products:
 - msc
 policyType: fixed
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 06/23/2007
   endDate: 04/14/2009
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/system-center/scom/deploy-upgrade-overview?view=sc-om-2019)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/system-center/scom/deploy-upgrade-overview?view=sc-om-2019)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
