--- a/lifecycle-data/products/visio-2007.yml
+++ b/lifecycle-data/products/visio-2007.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Visio 2007
-  description: Visio 2007 volgt het beleid voor vaste levenscyclus.
+  description: Visio 2007 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: a8a9b82837dc1542ef98770a51dc64f37a888318
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811915"
 name: Visio 2007
 summary: >+
-  Visio 2007 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Visio 2007 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Professional, Standard
+  Dit is van toepassing op de volgende edities: Professional, Standard
 
 products:
 - office
@@ -36,4 +36,4 @@ releases:
 - version: Original Release
   startDate: 01/27/2007
   endDate: 01/13/2009
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Migratiebegeleiding](/office/troubleshoot/support/office-2007-not-support)\n\n\n## <a name=\"editions\"></a>Edities \n* Professionele\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Richtlijnen voor migratie](/office/troubleshoot/support/office-2007-not-support)\n\n\n## <a name=\"editions\"></a>Edities \n* Professional\n* Standard"
