--- a/lifecycle-data/products/windows-embedded-2009.yml
+++ b/lifecycle-data/products/windows-embedded-2009.yml
@@ -1,25 +1,25 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Embedded 2009
-  description: Windows Embedded 2009 volgt het beleid voor vaste levenscyclus.
+  description: Windows Embedded 2009 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 1b701f08089fe9a7208f51de8f7a6d55f839528c
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812271"
 name: Windows Embedded 2009
 summary: >
-  Windows Embedded 2009 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Embedded 2009 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Standaard
+  Dit geldt voor de volgende edities: Standard
 
 
   > [!IMPORTANT]
 
-  > De ondersteuning is beëindigd. Zie de migratiebegeleiding hieronder.
+  > De ondersteuning is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
 - windows
 policyType: fixed
@@ -31,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 12/14/2008
   endDate: 01/08/2019
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Einde van de ondersteuning voor Windows Embedded 2009](/lifecycle/announcements/windows-embedded-2009-end-of-support)\n* [Windows 10 IoT Enterprise](https://www.microsoft.com/en-us/windowsforbusiness/windows-iot)\n* [Windows 10 Pro](https://www.microsoft.com/windowsforbusiness/windows-10-pro)\n\n\n## <a name=\"editions\"></a>Edities \n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Einde van de ondersteuning voor Windows Embedded 2009](/lifecycle/announcements/windows-embedded-2009-end-of-support)\n* [Windows 10 IoT Enterprise](https://www.microsoft.com/en-us/windowsforbusiness/windows-iot)\n* [Windows 10 Pro](https://www.microsoft.com/windowsforbusiness/windows-10-pro)\n\n\n## <a name=\"editions\"></a>Edities \n* Standard"
