--- a/lifecycle-data/products/windows-embedded-8.yml
+++ b/lifecycle-data/products/windows-embedded-8.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Windows ingesloten 8
-  description: Windows Embedded 8 volgt het beleid voor vaste levenscyclus.
+  title: Windows Embedded 8
+  description: Windows Embedded 8 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: f4d8f0d9d9388cb8b8187fbe923022a2b537ba3b
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812273"
-name: Windows ingesloten 8
+name: Windows Embedded 8
 summary: >+
-  Windows Embedded 8 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Embedded 8 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Pro, Standard
+  Dit geldt voor de volgende edities: Pro, Standaard
 
 products:
 - windows
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 10/30/2012
   endDate: 01/12/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n* [Windows Embedded 8.1](/lifecycle/products/windows-embedded-81-pro?branch=live)\n\n> [!NOTE]\n> Klanten moeten migreren naar Windows Emdedded 8.1 om ondersteund te blijven.\n\n## <a name=\"editions\"></a>Edities \n* Pro\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n* [Windows Embedded 8.1](/lifecycle/products/windows-embedded-81-pro?branch=live)\n\n> [!NOTE]\n> Klanten moeten naar Windows Emdedded 8.1 migreren om ondersteund te blijven.\n\n## <a name=\"editions\"></a>Edities \n* Pro\n* Standard"
