--- a/lifecycle-data/products/windows-mobile-2003.yml
+++ b/lifecycle-data/products/windows-mobile-2003.yml
@@ -1,25 +1,25 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Mobile 2003
-  description: Windows Mobile 2003 volgt het beleid voor een vaste levenscyclus.
+  description: Windows Mobile 2003 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: b96e4abc858aaa87a5031200887e906b781878f7
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812251"
 name: Windows Mobile 2003
 summary: >
-  Windows Mobile 2003 volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Mobile 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: voor Pocket PC, voor smartphones, Second Edition software voor Pocket PC Phone, Second Edition software voor Smartphone
+  Dit geldt voor de volgende edities: voor Pocket PC, voor smartphones, Tweede editie-software voor Pocket PC Phone, Tweede editie-software voor smartphone
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd.
+  > De ondersteuning voor dit product is beëindigd.
 products:
 - windows
 policyType: fixed
@@ -31,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 05/31/2004
   endDate: 07/08/2014
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* voor Pocket PC\n* voor smartphones\n* Second Edition software voor Pocket PC Phone\n* Second Edition software voor Smartphone"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* voor Pocket PC\n* voor smartphones\n* Tweede editie-software voor Pocket PC Phone\n* Tweede editie-software voor Smartphone"
