--- a/lifecycle-data/products/windows-multipoint-server-2010.yml
+++ b/lifecycle-data/products/windows-multipoint-server-2010.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows MultiPoint Server 2010
-  description: Windows MultiPoint Server 2010 volgt het beleid voor vaste levenscyclus.
+  description: Windows MultiPoint Server 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: fe2e8699f2c0dd5d2303ba32477aa39287a7c354
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812248"
 name: Windows MultiPoint Server 2010
 summary: >+
-  Windows MultiPoint Server 2010 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows MultiPoint Server 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit geldt voor de volgende edities: Academic, Standard
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 05/13/2010
   endDate: 07/14/2020
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://aka.ms/AA1ovn4)\n* [Aanvullende migratierichtlijnen](/windows-server/get-started/installation-and-upgrade)\n* [Productinformatie](/windows-server/remote/multipoint-services/getting-started-with-multipoint-services)\n\n\n## <a name=\"editions\"></a>Edities \n* Academische\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://aka.ms/AA1ovn4)\n* [Aanvullende migratierichtlijnen](/windows-server/get-started/installation-and-upgrade)\n* [Productgegevens](/windows-server/remote/multipoint-services/getting-started-with-multipoint-services)\n\n\n## <a name=\"editions\"></a>Edities \n* Academic\n* Standard"
