commit translated contents

--- a/lifecycle-data/products/azure-storsimple-8000-series.yml
+++ b/lifecycle-data/products/azure-storsimple-8000-series.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Azure StorSimple 8000-serie
-  description: Azure StorSimple 8000-serie volgt het beleid voor vaste levenscyclus.
+  description: Azure StorSimple 8000 Series volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: b7f4d4313e664c1d52d52ee6394c8cad97f69e85
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851660"
 name: Azure StorSimple 8000-serie
 summary: >+
-  Azure StorSimple 8000-serie volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Azure StorSimple 8000 Series volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -24,4 +24,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 11/01/2014
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Ondersteuning voor StorSimple-oplossingen](https://msdn.microsoft.com/library/mt433077(TechNet.10).aspx)\n* [Migratiebegeleiding](/azure/storage/files/storage-files-migration-storsimple-8000)\n\n> [!NOTE]\n> Ondersteuning voor Azure StorSimple 8000-serie wordt uitgebreid, zoals blijkt dat klanten de standaard tijdlijn voor de levenscyclus kunnen bieden. Uitgebreide ondersteuning omvat alleen hardwarevervangende en beveiligingsupdates."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Ondersteuning voor StorSimple-oplossingen](https://msdn.microsoft.com/library/mt433077(TechNet.10).aspx)\n* [Richtlijnen voor migratie](/azure/storage/files/storage-files-migration-storsimple-8000)\n\n> [!NOTE]\n> De ondersteuning voor de Azure StorSimple 8000-serie wordt zoals aangeduid uitgebreid om klanten de standaard levenscyclustijdlijn te bieden. De uitgebreide ondersteuning omvat uitsluitend hardware-vervanging en beveiligingsupdates."
