--- a/lifecycle-data/products/windows-embedded-81-handheld.yml
+++ b/lifecycle-data/products/windows-embedded-81-handheld.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Windows Embedded 8.1-handheld
-  description: Windows Embedded 8.1 Handheld volgt het beleid voor vaste levenscyclus.
+  title: Windows Embedded 8.1 Handheld
+  description: Windows Embedded 8.1 Handheld volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 0b19ad1d2a53ee16861bf63a21f6924b3bea1c67
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852120"
-name: Windows Embedded 8.1-handheld
+name: Windows Embedded 8.1 Handheld
 summary: >
-  Windows Embedded 8.1 Handheld volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Embedded 8.1 Handheld volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd. Als uw organisatie deze platforms nog steeds onderhoudt en aanvullende vragen heeft, neem dan contact op met uw accountteam.
+  > De ondersteuning voor dit product is beëindigd. Als uw organisatie deze platforms nog steeds onderhoudt en nog meer vragen heeft, neem dan contact op met uw accountteam.
 products:
 - windows
 policyType: fixed-mainstream-only
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 06/24/2014
   endDate: 07/09/2019
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Windows 10 IoT](/windows/iot-core/windows-iot-core)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Windows 10 IoT](/windows/iot-core/windows-iot-core)"
