--- a/lifecycle-data/products/duet-enterprise-for-microsoft-sharepoint-and-sap.yml
+++ b/lifecycle-data/products/duet-enterprise-for-microsoft-sharepoint-and-sap.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Duet Enterprise voor Microsoft SharePoint en SAP
-  description: Duet Enterprise voor Microsoft SharePoint en SAP volgt het beleid voor vaste levenscyclus.
+  description: Duet Enterprise voor Microsoft SharePoint en SAP volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: fbab932e4c44c55969682684dc2ec7590c3dd6f9
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851928"
 name: Duet Enterprise voor Microsoft SharePoint en SAP
 summary: >
-  Duet Enterprise voor Microsoft SharePoint en SAP volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Duet Enterprise voor Microsoft SharePoint en SAP volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd. Dit product wordt verkocht en ondersteund door SAP.
+  > De ondersteuning voor dit product is beëindigd. Dit product wordt verkocht en ondersteund door SAP.
 products:
 - office
 policyType: fixed
@@ -32,4 +32,4 @@ releases:
 - version: Original Release
   startDate: 03/16/2011
   endDate: 12/31/2017
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [SAP-ondersteuning](https://support.sap.com/index.html)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [SAP-ondersteuning](https://support.sap.com/index.html)"
