--- a/lifecycle-data/products/dynamics-365-for-finance-and-operations.yml
+++ b/lifecycle-data/products/dynamics-365-for-finance-and-operations.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Dynamics 365 voor financiën en operaties
-  description: Dynamics 365 for Finance and Operations volgt het modern lifecycle beleid.
+  title: Dynamics 365 for Finance and Operations
+  description: Dynamics 365 for Finance and Operations volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 04432837adaeae9ae5ec6f7cfad703875e45b772
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851924"
-name: Dynamics 365 voor financiën en operaties
+name: Dynamics 365 for Finance and Operations
 summary: >+
-  Dynamics 365 for Finance and Operations volgt het [modern](/lifecycle/policies/modern) lifecycle beleid.
+  Dynamics 365 for Finance and Operations volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Enterprise
+  Dit is van toepassing op de volgende edities: Enterprise
 
 products:
 - dynamics
@@ -24,4 +24,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 02/19/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Microsoft Dynamics 365-routekaart](https://roadmap.dynamics.com/)\n* [Onderhoudsinformatie](/dynamics365/operations/dev-itpro/migration-upgrade/versions-update-policy)\n* [Systeemvereisten](/dynamics365/fin-ops-core/fin-ops/get-started/system-requirements)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Microsoft Dynamics 365 Roadmap](https://roadmap.dynamics.com/)\n* [Onderhoudsinformatie](/dynamics365/operations/dev-itpro/migration-upgrade/versions-update-policy)\n* [Systeemvereisten](/dynamics365/fin-ops-core/fin-ops/get-started/system-requirements)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise"
