--- a/lifecycle-data/products/dynamics-ax-2012.yml
+++ b/lifecycle-data/products/dynamics-ax-2012.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics AX 2012
-  description: Dynamics AX 2012 volgt het beleid voor vaste levenscyclus.
+  description: Dynamics AX 2012 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 7e6320ed9052812a7169c0fa134948cf24dc99b9
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851921"
 name: Dynamics AX 2012
 summary: >+
-  Dynamics AX 2012 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics AX 2012 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 09/25/2011
   endDate: 10/12/2021
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/dynamics365/unified-operations/dev-itpro/migration-upgrade/upgrade-overview-2012)\n* [Dynamics 365 Migratieprogramma](https://dynamics.microsoft.com/migration-program/)\n* [Aanvullende levenscyclusinformatie](/dynamics365/fin-ops-core/dev-itpro/migration-upgrade/upgrade-overview-2012)\n\n> [!NOTE]\n> De reguliere en uitgebreide ondersteuning is uitgebreid zoals getoond."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/dynamics365/unified-operations/dev-itpro/migration-upgrade/upgrade-overview-2012)\n* [Dynamics 365 Migratieprogramma](https://dynamics.microsoft.com/migration-program/)\n* [Extra levenscyclusgegevens](/dynamics365/fin-ops-core/dev-itpro/migration-upgrade/upgrade-overview-2012)\n\n> [!NOTE]\n> De basisondersteuning en uitgebreide ondersteuning zijn verlengd zoals weergegeven."
