--- a/lifecycle-data/products/dynamics-gp-2013.yml
+++ b/lifecycle-data/products/dynamics-gp-2013.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics GP 2013
-  description: Dynamics GP 2013 volgt het beleid voor vaste levenscyclus.
+  description: Dynamics GP 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: df333e9c6053a99d607890a0874a35f0a1d99781
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852010"
 name: Dynamics GP 2013
 summary: >+
-  Dynamics GP 2013 volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics GP 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -31,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 03/12/2013
   endDate: 07/14/2015
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Aanvullende informatie en migratierichtlijnen](https://community.dynamics.com/gp/b/dynamicsgp/posts/microsoft-dynamics-gp-2016-r2-and-year-end-update-lifecycle-and-upgrade-services)\n* [Productinformatie](/dynamics-gp/)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Aanvullende gegevens en migratierichtlijnen](https://community.dynamics.com/gp/b/dynamicsgp/posts/microsoft-dynamics-gp-2016-r2-and-year-end-update-lifecycle-and-upgrade-services)\n* [Productgegevens](/dynamics-gp/)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
