--- a/lifecycle-data/products/infopath-2013.yml
+++ b/lifecycle-data/products/infopath-2013.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Infopad 2013
-  description: Infopath 2013 volgt het beleid voor vaste levenscyclus.
+  title: InfoPath 2013
+  description: Infopath 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 69bc8811a52c75cb58357ad4e0213f28a1001cae
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851879"
-name: Infopad 2013
+name: InfoPath 2013
 summary: >+
-  Infopath 2013 volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Infopath 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Standaard
+  Dit is van toepassing op de volgende edities: Standard
 
 products:
 - office
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 01/09/2013
   endDate: 07/14/2026
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Ondersteuningsdetails](https://blogs.office.com/2016/01/20/sharepoint-server-2016-and-project-server-2016-release-candidate-available)\n\n> [!NOTE]\n> Ondersteuning voor Microsoft InfoPath 2013 wordt uitgebreid zoals weergegeven om compatibiliteit met SharePoint Server 2016 te garanderen.\n\n## <a name=\"editions\"></a>Edities \n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Ondersteuningsinformatie](https://blogs.office.com/2016/01/20/sharepoint-server-2016-and-project-server-2016-release-candidate-available)\n\n> [!NOTE]\n> De ondersteuning voor Microsoft InfoPath 2013 is uitgebreid zoals weergegeven om compatibiliteit met SharePoint Server 2016 te garanderen.\n\n## <a name=\"editions\"></a>Edities \n* Standard"
