--- a/lifecycle-data/products/microsoft-365-apps-for-enterprise.yml
+++ b/lifecycle-data/products/microsoft-365-apps-for-enterprise.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft 365-apps voor ondernemingen
-  description: Microsoft 365 Apps for enterprise volgt het beleid voor moderne levenscyclus.
+  description: Microsoft 365-apps voor ondernemingen volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 5ba40811a13f29fa2677ddd6dfa56571327df7be
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851802"
 name: Microsoft 365-apps voor ondernemingen
 summary: >+
-  Microsoft 365 Apps for enterprise volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.
+  Microsoft 365-apps voor ondernemingen volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
@@ -22,4 +22,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 09/22/2015
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Ondersteuningsmatrix voor Office-configuratie](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2OqRI)\n* [Systeemvereisten](https://www.microsoft.com/microsoft-365/microsoft-365-and-office-resources)\n* [Onderhoudsinformatie](/DeployOffice/change-management-for-office-365-clients)\n\n> [!NOTE]\n> Dit product kreeg eerder de naam Office 365 ProPlus."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Ondersteuningsmatrix voor Office-configuratie](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2OqRI)\n* [Systeemvereisten](https://www.microsoft.com/microsoft-365/microsoft-365-and-office-resources)\n* [Onderhoudsinformatie](/DeployOffice/change-management-for-office-365-clients)\n\n> [!NOTE]\n> De oude benaming van dit product is Office 365 ProPlus."
