--- a/lifecycle-data/products/microsoft-application-virtualization-51.yml
+++ b/lifecycle-data/products/microsoft-application-virtualization-51.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Application Virtualisatie 5.1
-  description: Microsoft Application Virtualization 5.1 volgt het beleid voor vaste levenscyclus.
+  title: Microsoft Application Virtualization 5.1
+  description: Microsoft Application Virtualization 5.1 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 3f0cac2ee013dd73e44fe41d9ba1d07cfcfce2f1
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851798"
-name: Microsoft Application Virtualisatie 5.1
+name: Microsoft Application Virtualization 5.1
 summary: >+
-  Microsoft Application Virtualization 5.1 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Application Virtualization 5.1 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: voor Extern bureaublad-services, voor Windows-desktops
+  Dit geldt voor de volgende edities: voor Extern bureaublad-services, voor Windows-bureaubladen
 
 products:
 - windows
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 11/01/2015
   endDate: 04/14/2026
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Productinformatie](/microsoft-desktop-optimization-pack/appv-v5/microsoft-application-virtualization-50-administrators-guide)\n\n\n## <a name=\"editions\"></a>Edities \n* voor Extern bureaublad-services\n* voor Windows-bureaubladen"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/microsoft-desktop-optimization-pack/appv-v5/microsoft-application-virtualization-50-administrators-guide)\n\n\n## <a name=\"editions\"></a>Edities \n* Voor Extern bureaublad-services\n* voor Windows Desktops"
