--- a/lifecycle-data/products/microsoft-azure-virtual-machine-classic.yml
+++ b/lifecycle-data/products/microsoft-azure-virtual-machine-classic.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Azure Virtual Machine (klassiek) (bevestig met Azure voordat u publiceert - geen einddatum op datumraster)
-  description: Microsoft Azure Virtual Machine (klassiek) (bevestig met Azure voordat u publiceert - geen einddatum op datumraster) volgt het beleid voor moderne levenscyclus.
+  title: Microsoft Azure Virtual Machine (klassiek) (bevestig met Azure voor publicatie - geen einddatum op datumoverzicht)
+  description: Microsoft Azure Virtual Machine (klassiek) (bevestig met Azure voor publicatie - geen einddatum op datumoverzicht) volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 62691a5a8045c8744b291cd5475ad7b6828542e8
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851978"
-name: Microsoft Azure Virtual Machine (klassiek) (bevestig met Azure voordat u publiceert - geen einddatum op datumraster)
+name: Microsoft Azure Virtual Machine (klassiek) (bevestig met Azure voor publicatie - geen einddatum op datumoverzicht)
 summary: >+
-  Microsoft Azure Virtual Machine (klassiek) (bevestig met Azure voordat u publiceert - geen einddatum op datumraster) volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.
+  Microsoft Azure Virtual Machine (klassiek) (bevestig met Azure voor publicatie - geen einddatum op datumoverzicht) volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: Original Release
   startDate: 06/07/2012
   endDate: 03/01/2023
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/azure/virtual-machines/classic-vm-deprecation)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/azure/virtual-machines/classic-vm-deprecation)"
