--- a/lifecycle-data/products/microsoft-net-framework-451.yml
+++ b/lifecycle-data/products/microsoft-net-framework-451.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft .NET Framework 4.5.1
-  description: Microsoft .NET Framework 4.5.1 volgt het beleid voor levenscyclus van componenten.
+  description: Microsoft .NET Framework 4.5.1 volgt het levenscyclusbeleid voor qonderdelen.
   ms.date: 07/28/2020
   ms.openlocfilehash: 9141a70347bbcd248703cfb15bfe1414abda7caa
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851763"
 name: Microsoft .NET Framework 4.5.1
 summary: >+
-  Microsoft .NET Framework 4.5.1 volgt het beleid voor levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)
+  Microsoft .NET Framework 4.5.1 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: RTM
   startDate: 01/15/2014
   endDate: 01/12/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Productinformatie](/dotnet/framework/migration-guide/versions-and-dependencies#net-framework-451)\n\n> [!NOTE]\n> De steun voor .NET Framework 4, 4,5 en 4,5,1 eindigde op 12 januari 2016."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/dotnet/framework/migration-guide/versions-and-dependencies#net-framework-451)\n\n> [!NOTE]\n> Ondersteuning voor .NET Framework 4, 4.5 en 4.5.1 eindigde op 12 januari 2016."
