--- a/lifecycle-data/products/microsoft-net-framework-46.yml
+++ b/lifecycle-data/products/microsoft-net-framework-46.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft .NET Framework 4.6
-  description: Microsoft .NET Framework 4.6 volgt het beleid voor de levenscyclus van componenten.
+  description: Microsoft .NET Framework 4.6 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
   ms.openlocfilehash: 1505b81ae5333b02ddda8778583baea94b516a5c
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851762"
 name: Microsoft .NET Framework 4.6
 summary: >+
-  Microsoft .NET Framework 4.6 volgt het beleid voor de levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)
+  Microsoft .NET Framework 4.6 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
@@ -22,4 +22,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 07/29/2015
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Veelgestelde vragen over de levenscyclus van .NET Framework](/lifecycle/faq/dotnet-framework)\n* [Productinformatie](/dotnet/framework/migration-guide/versions-and-dependencies#net-framework-46)\n\n> [!NOTE]\n> .NET Framework is een onderdeel van het Windows OS. Componenten krijgen dezelfde ondersteuning als hun bovenliggende product of platform."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus van .NET Framework](/lifecycle/faq/dotnet-framework)\n* [Productgegevens](/dotnet/framework/migration-guide/versions-and-dependencies#net-framework-46)\n\n> [!NOTE]\n> .NET Framework is onderdeel van het Windows-besturingssysteem. Componenten ontvangen dezelfde ondersteuning als het bovenliggende product of platform."
