--- a/lifecycle-data/products/microsoft-net-framework-461.yml
+++ b/lifecycle-data/products/microsoft-net-framework-461.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft .NET Framework 4.6.1
-  description: Microsoft .NET Framework 4.6.1 volgt het beleid voor levenscyclus van componenten.
+  description: Microsoft .NET Framework 4.6.1 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
   ms.openlocfilehash: 2580b80cbd1e031aa359befe7bbeefc69b40cd0f
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851760"
 name: Microsoft .NET Framework 4.6.1
 summary: >+
-  Microsoft .NET Framework 4.6.1 volgt het beleid voor levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)
+  Microsoft .NET Framework 4.6.1 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
@@ -22,4 +22,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 11/30/2015
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Veelgestelde vragen over de levenscyclus van .NET Framework](/lifecycle/faq/dotnet-framework)\n* [Productinformatie](/dotnet/framework/migration-guide/versions-and-dependencies#net-framework-461)\n\n> [!NOTE]\n> .NET Framework is een onderdeel van het Windows OS. Componenten krijgen dezelfde ondersteuning als hun bovenliggende product of platform."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus van .NET Framework](/lifecycle/faq/dotnet-framework)\n* [Productgegevens](/dotnet/framework/migration-guide/versions-and-dependencies#net-framework-461)\n\n> [!NOTE]\n> .NET Framework is onderdeel van het Windows-besturingssysteem. Componenten ontvangen dezelfde ondersteuning als het bovenliggende product of platform."
