--- a/lifecycle-data/products/microsoft-system-center-2012-operations-manager.yml
+++ b/lifecycle-data/products/microsoft-system-center-2012-operations-manager.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft System Center 2012 Operations Manager
-  description: Microsoft System Center 2012 Operations Manager volgt het beleid voor vaste levenscyclus.
+  description: Microsoft System Center 2012 Operations Manager volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 837eee5f41fd4a6fe7ae7bee9c04af085e831004
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851864"
 name: Microsoft System Center 2012 Operations Manager
 summary: >+
-  Microsoft System Center 2012 Operations Manager volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft System Center 2012 Operations Manager volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 05/30/2012
   endDate: 01/14/2014
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Systeemcentrumdocumentatie](/system-center/#pivot=components&panel=components-all)\n* [Systeemcentrumbronnen](https://www.microsoft.com/system-center/resources)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [System Center-documentatie](/system-center/#pivot=components&panel=components-all)\n* [System Center-resources](https://www.microsoft.com/system-center/resources)"
