--- a/lifecycle-data/products/visual-studio-team-foundation-server-2017.yml
+++ b/lifecycle-data/products/visual-studio-team-foundation-server-2017.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Visual Studio Team Foundation Server 2017
-  description: Visual Studio Team Foundation Server 2017 volgt het beleid voor vaste levenscyclus.
+  description: Visual Studio Team Foundation Server 2017 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: f82a00b0f5bde434fc6b20afb923b8326d269512
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852121"
 name: Visual Studio Team Foundation Server 2017
 summary: >+
-  Visual Studio Team Foundation Server 2017 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Visual Studio Team Foundation Server 2017 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 11/16/2016
   endDate: 01/08/2019
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Productinformatie - Azure Dev Ops en TFS](/azure/devops/server/whats-new?view=azure-devops)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Productgegevens - Azure Dev Ops en TFS](/azure/devops/server/whats-new?view=azure-devops)"
