--- a/lifecycle-data/products/windows-10-mobile-enterprise-released-in-august-2016.yml
+++ b/lifecycle-data/products/windows-10-mobile-enterprise-released-in-august-2016.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows 10 Mobile Enterprise, uitgebracht in augustus 2016
-  description: Windows 10 Mobile Enterprise, uitgebracht in augustus 2016, volgt het beleid voor een vaste levenscyclus.
+  description: Windows 10 Mobile Enterprise, uitgebracht in augustus 2016, volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 4be5f436289a8bcbb309b5b3e9eea4c43abbec7c
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851939"
 name: Windows 10 Mobile Enterprise, uitgebracht in augustus 2016
 summary: >
-  Windows 10 Mobile Enterprise, uitgebracht in augustus 2016, volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows 10 Mobile Enterprise, uitgebracht in augustus 2016, volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd.
+  > De ondersteuning voor dit product is beëindigd.
 products:
 - windows
 policyType: fixed-mainstream-only
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 08/16/2016
   endDate: 10/09/2018
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Veelgestelde vragen over de levenscyclus van apparaatbesturingssysteem](/lifecycle/faq/device-operating-systems)\n* [Windows 10 Mobile beëindigde de ondersteuning op 10 december 2019](/lifecycle/announcements/windows-10-mobile-end-of-support)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus van het apparaatbesturingssysteem](/lifecycle/faq/device-operating-systems)\n* [De ondersteuning voor Windows 10 Mobile is op 10 december 2019 beëindigd](/lifecycle/announcements/windows-10-mobile-end-of-support)"
