--- a/lifecycle-data/products/windows-10-mobile-enterprise-released-in-november-2015.yml
+++ b/lifecycle-data/products/windows-10-mobile-enterprise-released-in-november-2015.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows 10 Mobile Enterprise, uitgebracht in november 2015
-  description: Windows 10 Mobile Enterprise, uitgebracht in november 2015, volgt het beleid voor vaste levenscyclus.
+  description: Windows 10 Mobile Enterprise, uitgebracht in november 2015, volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 0299ce6896a2fc30f3000e41d4d09469358fd1c8
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851685"
 name: Windows 10 Mobile Enterprise, uitgebracht in november 2015
 summary: >
-  Windows 10 Mobile Enterprise, uitgebracht in november 2015, volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows 10 Mobile Enterprise, uitgebracht in november 2015, volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd.
+  > De ondersteuning voor dit product is beëindigd.
 products:
 - windows
 policyType: fixed-mainstream-only
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 11/16/2015
   endDate: 01/09/2018
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Veelgestelde vragen over de levenscyclus van apparaatbesturingssysteem](/lifecycle/faq/device-operating-systems)\n* [Windows 10 Mobile beëindigde de ondersteuning op 10 december 2019](/lifecycle/announcements/windows-10-mobile-end-of-support)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus van het apparaatbesturingssysteem](/lifecycle/faq/device-operating-systems)\n* [De ondersteuning voor Windows 10 Mobile is op 10 december 2019 beëindigd](/lifecycle/announcements/windows-10-mobile-end-of-support)"
