--- a/lifecycle-data/products/windows-defender-for-windows-8-and-81.yml
+++ b/lifecycle-data/products/windows-defender-for-windows-8-and-81.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Defender voor Windows 8 en 8.1
-  description: Windows Defender Voor Windows 8 en 8.1 volgt het beleid voor de levenscyclus van componenten.
+  description: Windows Defender voor Windows 8 en 8.1 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
   ms.openlocfilehash: d4024d32c3d61568ee01854acd1422ef614fedfb
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851681"
 name: Windows Defender voor Windows 8 en 8.1
 summary: >+
-  Windows Defender Voor Windows 8 en 8.1 volgt het beleid voor de levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)
+  Windows Defender voor Windows 8 en 8.1 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
@@ -27,4 +27,4 @@ releases:
 - version: For Windows 8
   startDate: 10/30/2012
   endDate: 01/12/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Windows 8](/lifecycle/)\n\n> [!NOTE]\n> Deze release staat bekend als een component die de levenscyclus van het bovenliggende product volgt."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Windows 8](/lifecycle/)\n\n> [!NOTE]\n> Deze release staat bekend als een onderdeel die de levenscyclus het bovenliggende product volgt."
