--- a/lifecycle-data/products/windows-multipoint-server-2011.yml
+++ b/lifecycle-data/products/windows-multipoint-server-2011.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows MultiPoint Server 2011
-  description: Windows MultiPoint Server 2011 volgt het beleid voor vaste levenscyclus.
+  description: Windows Multipoint Server 2011 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 002686168c27c03c0b513a06c0b73754b9559a3c
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851888"
 name: Windows MultiPoint Server 2011
 summary: >+
-  Windows MultiPoint Server 2011 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows MultiPoint Server 2011 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Premium, Standard
+  Dit is van toepassing op de volgende edities: Premium, Standard
 
 products:
 - windows
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 05/12/2011
   endDate: 07/13/2021
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/windows-server/get-started/installation-and-upgrade)\n* [Productinformatie](/windows-server/remote/multipoint-services/getting-started-with-multipoint-services)\n\n\n## <a name=\"editions\"></a>Edities \n* Premium\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/windows-server/get-started/installation-and-upgrade)\n* [Productgegevens](/windows-server/remote/multipoint-services/getting-started-with-multipoint-services)\n\n\n## <a name=\"editions\"></a>Edities \n* Premium\n* Standard"
