--- a/lifecycle-data/products/windows-storage-server-2012.yml
+++ b/lifecycle-data/products/windows-storage-server-2012.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Storage Server 2012
-  description: Windows Storage Server 2012 volgt het beleid voor vaste levenscyclus.
+  description: Windows Storage Server 2012 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: ff27c05566c461244c14b45f75ef07a6ad47f6db
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851673"
 name: Windows Storage Server 2012
 summary: >+
-  Windows Storage Server 2012 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Storage Server 2012 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Standard, Workgroup
+  Dit geldt voor de volgende edities: Standaard, Werkgroep
 
 products:
 - windows
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 10/30/2012
   endDate: 10/10/2023
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/windows-server/upgrade/upgrade-2012-to-2016)\n\n> [!NOTE]\n> De algemene en uitgebreide ondersteuning voor dit product is uitgebreid om klanten de standaard tijdlijn voor de overgang van de levenscyclus te bieden.\n\n## <a name=\"editions\"></a>Edities \n* Standaard\n* Werkgroep"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/windows-server/upgrade/upgrade-2012-to-2016)\n\n> [!NOTE]\n> De basis- en uitgebreide ondersteuning voor dit product is uitgebreid om klanten de standaard tijdlijn voor de overgang van de levenscyclus te bieden.\n\n## <a name=\"editions\"></a>Edities \n* Standard\n* Workgroup"
